# bidirectional-channel

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: actor.rs  bidirectional_channel.rs  channel.rs  lib.rs
tests/: counter.rs  integration.rs  tokio.rs
