[package]
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
description = "A channel where receivers can respond to a message, and senders can wait for a response."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "bidirectional-channel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = "0.1.10"
async-std = "1.9.0"
async-trait = "0.1.50"
derive_more = "0.99.14"
futures = "0.3.15"
log = "0.4.14"
thiserror = "1.0.25"

[dev-dependencies]
anyhow = "1.0.40"
async-std = {version = "1.9.0", features = ["attributes"]}
pretty_env_logger = "0.4.0"
