[package]
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
description = "A channel where receivers can respond to a message, and senders can wait for a response."
edition = "2018"
keywords = ["channel", "async", "request", "response"]
license = "MIT OR Apache-2.0"
name = "bidirectional-channel"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
derive_more = "0.99.14"
futures = "0.3.15"
thiserror = "1.0.25"

[dev-dependencies]
anyhow = "1.0.40"
async-std = {version = "1.9.0", features = ["attributes"]}
ntest = "0.7.3"
pretty_env_logger = "0.4.0"
